# Deep-RF

./: .flake8  DOCS_ARCHITECTURE.md  DOCS_DESIGN_SYSTEM.md  DOCS_ENGINE.md  DOCS_ILOVEANTENAS_SIMULATOR.md  DOCS_ILOVEANTENAS_WEB.md  DOCS_STRUCTURE.md  README.md  debug_api_response.txt  diagnose_antennas.py  fix_imports.py  pyproject.toml  requirements.txt
antenna_simulator/: diagnostic_geometry.py  main.py
antenna_simulator/core/: __init__.py  constants.py  em_constants.py  fdtd_grid.py  grid.py  grid_config.py  materials.py
antenna_simulator/core/geometry/: __init__.py  factory.py  primitives.py  topology.py
antenna_simulator/docs/: ARCHITECTURE.md
antenna_simulator/fem/: mesh_generator.py  solver.py  solver_3d.py
antenna_simulator/gui/: __init__.py  main_window.py
antenna_simulator/integration/: scikit_rf_bridge.py
antenna_simulator/nec/: geometry.py  solver.py
antenna_simulator/solver/: __init__.py  farfield.py  fdtd.py  kernels.py  monitors.py  sources.py
antenna_simulator/utils/: __init__.py  helpers.py
antenna_simulator/visualization/: __init__.py  plots.py  smith_chart.py
antenna_web/: README.md  analysis.py  antennas.py  app.py  config.py  matching.py  optimization.py  optimizer.py  resources.py  simulation.py  state.py  storage.py
antenna_web/data/: antennas.json
antenna_web/static/: manifest.webmanifest  robots.txt  sitemap.xml
antenna_web/templates/: analise.html  index.html
src/iloveantennas/: __init__.py
tests/: test_diagnostics.py  test_fdtd_backend.py  test_propagation.py  test_web_contracts.py
(+87 files in other folders)
